# CCTools

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
cctools/: __init__.py  cc.py  cctools.py  logger.py  pipeline.py
docs/: index.md  modules.md
script/: zip_key.sh
tests/: test_cctools.py  test_pipeline.py
tests/data/123/annotations/: instances_default.json  instances_one2.json
tests/data/cctools/annotations/: instances_default.json  instances_diff.json  instances_one1.json  instances_split.json
tests/data/pipeline/: split_data_pipeline_img10_ratio721.cache  split_data_pipeline_img10_ratio721_byfile.cache
tests/data/pipeline/annotations/: instances_default.json
